feature: 환경별 application.yml 설정

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -1,1 +1,9 @@
-
+spring:
+  profiles:
+    group:
+      test:
+        - domain-test
+      local:
+        - domain-local
+      prod:
+        - domain-prod
