feature: logback 설정 및 slack 에러 알림 설정

--- a/api/src/main/resources/application-local.yml
+++ b/api/src/main/resources/application-local.yml
@@ -4,3 +4,18 @@ server:
 spring:
   application:
     name: playground-api-local
+
+logging:
+  file:
+    name: ${spring.application.name}
+  config: classpath:logback-spring-local.xml
+  level:
+    org:
+      hibernate:
+        SQL: debug
+        orm.jdbc.bind: trace
+
+webhook:
+  slack:
+    baseUrl: https://hooks.slack.com
+    endpoint: /services/{workspace-identifier}/{webhook-identifier}/{token-key}
