feature: 게시판 도메인 구현

--- a/api/src/main/resources/application-local.yml
+++ b/api/src/main/resources/application-local.yml
@@ -18,4 +18,4 @@ logging:
 webhook:
   slack:
     baseUrl: https://hooks.slack.com
-    endpoint: /services/{workspace-identifier}/{webhook-identifier}/{token-key}
+    endpoint: ${SLACK_WEBHOOK_URL}
