--- a/domain/src/main/resources/application-domain-local.yml
+++ b/domain/src/main/resources/application-domain-local.yml
@@ -10,7 +10,7 @@ spring:
     properties:
       hibernate:
         hbm2ddl:
-          auto: create
+          auto: update
         show_sql: true
         format_sql: true
         highlight_sql: true
